# ka-deploy

./: BUGS  INSTALL  README
doc/: Ka-deploy.txt  installation-ka.htm  ka-d.1  ka-deploy.1  windows.txt
doc/outdated/: boot.txt  installation.html  installation.txt  source_install.html
rmtplib/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  RMTPclient.cc  RMTPlib.h  RMTPlist.h  RMTPserver.cc  TODO  aclocal.m4  config.cache  config.h.in  config.status  configure  configure.in  libtool  mkinstalldirs
rmtplib/test/: AUTHORS  Makefile.am  Makefile.in  README  client.cc  config.h.in  configure  configure.in  server.cc
scripts/: bootable_flag.sh  fdisk_to_desc  gen_modprobe_conf.pl  ka-d.sh  ka_replication.sh  make_initrd_grub  make_initrd_lilo  prepare_node.sh  replication.conf  send_image.sh  send_status.pl  status_node.pl  store_log.sh  udev_creation.sh  writeimage.sh
scripts/boot_progress/: avancement_boot_noeuds.pl
scripts/dhcpd/: README  config.pm  create_dhcpd_conf.pl  data  dhcpd.pl  mkiplist  recup_addresses_mac.pl
scripts/windows/hostname/: HostnameService.mcp  main.cc
src/: .#client.c.1.12  .#server.c.1.17  Makefile  Makefile.cflags  buffer.c  buffer.h  client.c  client.c.werror  delay.c  delay.h  export  multicast_client.cpp  multicast_server.cpp  packet.h  server.c  server.c.werror  server.h  tree.h  udp.c  udp.h
